Revert "backend: usecase and http API"
This reverts commit a2123b639e272e733c4386d962f0c6278ee30629.
