# backend/docs/swagger.json
@@ -26,44 +26,13 @@
                 "summary": "List packs",
                 "parameters": [
                     {
-                        "type": "string",
-                        "example": "author",
-                        "name": "author",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "01.01.1970",
-                        "name": "max_creation_date",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "01.01.1970",
-                        "name": "min_creation_date",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "name",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "enum": [
-                            "creation_date",
-                            "downloads_num"
-                        ],
-                        "type": "string",
-                        "example": "creation_date",
-                        "name": "sort_by",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "tag1,tag2",
-                        "name": "tags",
-                        "in": "query"
+                        "description": "Filter",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PackListRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -121,12 +90,6 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/models.PackResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -140,8 +103,7 @@
             "get": {
                 "description": "Download questions pack",
                 "produces": [
-                    "application/octet-stream",
-                    "application/json"
+                    "application/octet-stream"
                 ],
                 "tags": [
                     "packs"
@@ -149,8 +111,7 @@
                 "summary": "Download pack",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "uuid",
+                        "type": "integer",
                         "description": "Pack guid",
                         "name": "guid",
                         "in": "path",
@@ -168,7 +129,10 @@
                         "description": "OK"
                     },
                     "404": {
-                        "description": "Not Found"
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -208,6 +172,44 @@
                 "message": {
                     "type": "string",
                     "example": "message"
+                }
+            }
+        },
+        "models.PackListRequest": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string",
+                    "example": "author"
+                },
+                "max_creation_date": {
+                    "type": "string",
+                    "example": "01.01.1970"
+                },
+                "min_creation_date": {
+                    "type": "string",
+                    "example": "01.01.1970"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "name"
+                },
+                "sort_by": {
+                    "type": "string",
+                    "enum": [
+                        "creation_date",
+                        "downloads_num"
+                    ],
+                    "example": "creation_date"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "tags"
+                    ]
                 }
             }
         },
@@ -252,16 +254,6 @@
                 "name": {
                     "type": "string",
                     "example": "name"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "tag1",
-                        "tag2"
-                    ]
                 }
             }
         }
